# micro-tasks-manager

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  main.py  microtask_manager.db-shm  microtask_manager.db-wal  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  replit.nix  requirements.txt  start.sh  start_dev.sh
.agents/memory/: MEMORY.md  authenticated-dashboard-sync.md
backend/: database.py  main.py  models.py  schemas.py  security.py
backend/plugins/: base.py  registry.py
backend/plugins/adapters/: generic.py
backend/routers/: auth_browser.py  browser.py  credentials.py  notifications.py  reports.py  settings.py  sync.py  tasks.py  websites.py
backend/services/: activity.py  auth_store.py  browser_session.py  sync.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  LoginBrowserModal.tsx  MobileHeader.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  ConfirmDialog.tsx  EmptyState.tsx  Modal.tsx  StatCard.tsx
frontend/src/db/: activity.ts  credentials.ts  index.ts  notifications.ts  session-cookies.ts  settings.ts  snapshots.ts  tasks.ts  websites.ts
frontend/src/hooks/: useSettings.ts
frontend/src/pages/: Dashboard.tsx  Notifications.tsx  Reports.tsx  Settings.tsx  Tasks.tsx  Websites.tsx
